--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.11.1",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-sass": "^5.5.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-images": "^6.6.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^7.4.0",
     "gatsby-source-filesystem": "^4.5.1",
     "gatsby-transformer-remark": "^5.6.0",
     "node-sass": "^6.0.1",
