--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-images": "^6.6.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-contentful": "^7.4.0",
     "gatsby-source-filesystem": "^4.5.1",
     "gatsby-transformer-remark": "^5.6.0",
+    "gsap": "^3.9.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
