--- a/.github/deploy-on-push.yml
+++ b/.github/deploy-on-push.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: enriikke/gatsby-gh-pages-action@v2
+        env:
+          CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
         with:
           access-token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           deploy-branch: gh-pages
